--- a/css/character_selection.css
+++ b/css/character_selection.css
@@ -1,9 +1,18 @@
 body {
+    margin: 0;
+    padding: 0;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: cover;
     background-position: center;
     color: #fff;
-    padding-top: 5rem;
+}
+
+body.terrorist {
+    background-image: url(../assets/t_bg.jpeg);
+}
+
+body.counter-terrorist {
+    background-image: url(../assets/ct_bg.jpg);
 }
 
 .header-style {
@@ -12,6 +21,7 @@ body {
     align-items: center;
     font-size: 1.5rem;
     text-align: left;
+    opacity: 0.1;
     padding: 1rem;
     background-color: #2c3e50;
     color: #f5f5f5;
@@ -26,7 +36,6 @@ body {
 
 .button-style {
     margin-right: 3rem;
-    /* Add this line */
 }
 
 
