--- a/css/weapon_selection.css
+++ b/css/weapon_selection.css
@@ -7,7 +7,6 @@ body {
     color: #fff;
     background-color: #f4f4f4;
     overflow-x: hidden;
-    display: flex;
     flex-direction: row;
 }
 
@@ -19,13 +18,36 @@ body.counter-terrorist {
     background-image: url(../assets/ct_bg.jpg);
 }
 
+.selected-category {
+    /* Add your styles for selected categories here */
+    background-color: #f0f0f0;
+    border: 2px solid #000;
+    color: #000;
+    font-weight: bold;
+}
+
+.selected-weapon-wrapper {
+    /* Add your styles for selected weapon wrappers here */
+    background-color: #f0f0f0;
+    border: 2px solid #000;
+    color: #000;
+    font-weight: bold;
+}
+
+.selected-weapon {
+    /* Add your styles for selected weapons here */
+    background-color: #f0f0f0;
+    border: 2px solid #000;
+    color: #000;
+    font-weight: bold;
+}
+
 .category-wrapper-container {
     position: relative;
     top: 0;
     height: 100%;
     flex: 25%;
     max-height: 500px;
-    /* adjust this value as needed */
     overflow: auto;
     margin: 20px;
     padding: 20px;
@@ -44,7 +66,9 @@ body.counter-terrorist {
     text-align: center;
 }
 
-.category-wrapper-container li {
+.category-wrapper-container {
+    display: flex;
+    gap: 2.5rem;
     margin-bottom: 1rem;
     padding-left: 1.5rem;
     position: relative;
@@ -52,7 +76,7 @@ body.counter-terrorist {
     transition: all 0.3s ease;
 }
 
-.category-wrapper-container li:hover {
+.weapon-category:hover {
     background-color: #34495e;
 }
 
@@ -60,14 +84,13 @@ body.counter-terrorist {
 .weapons-section {
     display: flex;
     flex-direction: column;
-    flex: 75%;
+    /* flex: 75%; */
 }
 
 .weapon-wrapper-container {
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    flex: 75%;
+    gap: 2.5rem;
     position: relative;
     top: 0;
     margin: 20px;
@@ -75,24 +98,20 @@ body.counter-terrorist {
     background-color: #2c3e50;
     border-radius: 5px;
     color: #f5f5f5;
+    overflow: auto;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .weapon-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex: 75%;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
+    gap: 2rem;
     padding: 1rem;
-    margin-top: 50px;
-    background-color: rgba(255, 255, 255, 0.1);
-    color: #fff;
-    box-sizing: border-box;
-    border-radius: 5px;
+    margin: auto;
+    margin-bottom: 2.5rem;
 }
 
 .weapon {
-    flex: 0 0 calc(33.33% - 20px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -102,6 +121,9 @@ body.counter-terrorist {
     border: 1px solid #000;
     padding: 10px;
     overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px;
 }
 
 .weapon img {
@@ -110,14 +132,13 @@ body.counter-terrorist {
 }
 
 .weapon:hover {
-    transform: scale(1.1);
-    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
-    background-color: #e8e8e8;
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .weapon:active {
-    transform: scale(0.95);
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+    transform: scale(1);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .weapon h4 {
@@ -133,7 +154,7 @@ body.counter-terrorist {
 }
 
 @media (max-width: 600px) {
-    .weapon {
-        flex: 0 0 100%;
+    .weapon-container {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
